Base de dados quase pronta

--- a/src/components/Ingredientes/ingredientes.css
+++ b/src/components/Ingredientes/ingredientes.css
@@ -45,3 +45,14 @@ li{
 .h3_d{
     margin-left: 5%;
 }
+.pdf-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.pdf-view{
+    width: 80%;
+    height: 80vh;
+    border: 1px solid #ccc;
+}
