--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -33,6 +33,8 @@ a {
 .nav__brand {
     text-transform: uppercase;
     font-weight: bold;
+    font-size: 20px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .nav__menu {
@@ -40,6 +42,7 @@ a {
     align-items: center;
     justify-content: space-around;
     gap: 3rem;
+    font-weight: bold;
 }
 
 .nav__item_button_nav {
