Pesquisa de receitas + formatação de código

--- a/src/components/Admin/admin.css
+++ b/src/components/Admin/admin.css
@@ -1,13 +1,15 @@
-h2{
-    color: #DCCA87;;
+h2 {
+    color: #DCCA87;
+    ;
 }
 
-.h22{
+.h22 {
     padding: 4px;
     padding-bottom: 5px;
 
 }
-.frente{
+
+.frente {
     padding-left: 4%;
 
 }
